--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
-title: Minimal theme
+title: <p align="center"> Dr. Himanshu Bedi </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: 
+  <p align="center">
+  <a href="https://github.com/pioneerleo">GitHub</a>
+  
+  <br>  
+  A budding Data Scientist
+  <br>
+  </p>
+  
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
