--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Dr. Himanshu Bedi </p>
-logo: /assets/img/logo.png
+logo: /assets/img/himanshubedi.jpeg
 description: 
   <p align="center">
   <a href="https://github.com/pioneerleo">GitHub</a>
