Pic changed from jpeg to png

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Dr. Himanshu Bedi </p>
-logo: /assets/img/himanshubedi.jpeg
+logo: /assets/img/HimanshuBedi.png
 description: 
   <p align="center">
   <a href="https://github.com/pioneerleo">GitHub</a>
